--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Inmobiliario</title>
+    <title>Proyecto Maria Paula Tocancipa</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,21 +111,16 @@
         <section id="plans" class="py-20 bg-gray-100">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h2 class="text-3xl font-bold text-gray-900">Planos</h2>
-                <div class="mt-12 grid gap-8 md:grid-cols-3">
+                <div class="mt-12 grid gap-8 md:grid-cols-2">
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <h3 class="text-xl font-bold text-gray-800">Plano 1</h3>
-                        <p class="mt-4 text-gray-600">Descripción del plano 1.</p>
-                        <img src="img/plano1.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano1.jpeg')">
+                        <h3 class="text-xl font-bold text-gray-800">Primer piso</h3>
+                        <p class="mt-4 text-gray-600 mb-8">Sala y comedor independiente, baño de invitados, patio exterior privado</p>
+                        <img src="img/p2.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano1.jpeg')">
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <h3 class="text-xl font-bold text-gray-800">Plano 2</h3>
-                        <p class="mt-4 text-gray-600">Descripción del plano 2.</p>
-                        <img src="img/plano2.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano2.jpeg')">
-                    </div>
-                    <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <h3 class="text-xl font-bold text-gray-800">Plano 3</h3>
-                        <p class="mt-4 text-gray-600">Descripción del plano 3.</p>
-                        <img src="img/plano3.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano3.jpeg')">
+                        <h3 class="text-xl font-bold text-gray-800">Segundo piso</h3>
+                        <p class="mt-4 text-gray-600 mb-8">3 habitaciones, 2 baños</p>
+                        <img src="img/p.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano2.jpeg')">
                     </div>
                 </div>
             </div>
