--- a/index.html
+++ b/index.html
@@ -126,26 +126,10 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="py-20 bg-gray-100">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <h2 class="text-3xl font-bold text-gray-900">Contacto</h2>
-                <p class="mt-4 text-lg text-gray-600">Déjanos tus datos y nos pondremos en contacto contigo.</p>
-                <form action="#" class="mt-8 max-w-md mx-auto">
-                    <div class="grid gap-4 sm:grid-cols-2">
-                        <input type="text" placeholder="Nombre" class="w-full p-3 border rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-500">
-                        <input type="email" placeholder="Correo Electrónico" class="w-full p-3 border rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-500">
-                    </div>
-                    <textarea placeholder="Mensaje" class="w-full p-3 mt-4 border rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-500"></textarea>
-                    <button type="submit" class="mt-6 w-full bg-yellow-500 hover:bg-yellow-600 text-white text-lg font-semibold py-3 rounded-lg shadow-lg">Enviar</button>
-                </form>
-            </div>
-        </section>
-
         <!-- Footer -->
-        <footer class="bg-gradient-to-r from-green-400 to-blue-500 py-6">
+        <footer class="bg-yellow-900 py-6">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <p class="text-white">&copy; 2024 Proyecto Inmobiliario. Todos los derechos reservados.</p>
+                <p class="text-white">&copy; 2024 Valeria Larrea. Todos los derechos reservados.</p>
             </div>
         </footer>
     </div>
