--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <h3 class="text-xl font-bold text-gray-800">Excelente ubicación</h3>
                         <p class="mt-4 text-gray-600">Conjunto privado en Tocancipa</p>
                     </div>
+
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
                         <div class="flex justify-center mb-4">
                             <img src="https://img.freepik.com/vector-premium/icono-hoja-verde-ecologica-bio-naturaleza-verde-eco-simbolo-web-negocios_599062-3733.jpg" alt="zona verde" class="h-20 w-20">
@@ -83,12 +84,11 @@
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
                         <div class="flex justify-center mb-4">
-                            <img src="https://img.freepik.com/vector-premium/icono-hoja-verde-ecologica-bio-naturaleza-verde-eco-simbolo-web-negocios_599062-3733.jpg" alt="zona verde" class="h-20 w-20">
+                            <img src="https://st.depositphotos.com/1010146/4342/v/450/depositphotos_43424071-stock-illustration-stop-spying-icon.jpg" alt="zona verde" class="h-20 w-20">
                         </div>
-                        <h3 class="text-xl font-bold text-gray-800">Áreas Verdes</h3>
-                        <p class="mt-4 text-gray-600">Amplios espacios verdes y zonas recreativas para toda la familia.</p>
+                        <h3 class="text-xl font-bold text-gray-800">Conjunto privado sin pago de administracion</h3>
+                        <p class="mt-4 text-gray-600">Conjunto privado con porton electrico y camara de vigilancia </p>
                     </div>
-                    
                 </div>
             </div>
         </section>
@@ -113,13 +113,25 @@
                 <h2 class="text-3xl font-bold text-gray-900">Planos</h2>
                 <div class="mt-12 grid gap-8 md:grid-cols-2">
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <h3 class="text-xl font-bold text-gray-800">Primer piso</h3>
-                        <p class="mt-4 text-gray-600 mb-8">Sala y comedor independiente, baño de invitados, patio exterior privado</p>
-                        <img src="img/p2.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano1.jpeg')">
+                        <h3 class="text-xl font-bold text-gray-800 mb-4">Primer piso</h3>
+                            <ul class="mb-10">
+                                <li>Parqueadero propio y cubierto</li>
+                                <li>Baño de invitados</li>
+                                <li>Sala y comedor independientes</li>
+                                <li>Patio exterior propio</li>
+                                <li>Chimenea</li>
+                                <li>Cocina americana</li>
+                                <li>Meson en granito</li>
+                            </ul>                        
+                <img src="img/p2.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano1.jpeg')">
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <h3 class="text-xl font-bold text-gray-800">Segundo piso</h3>
-                        <p class="mt-4 text-gray-600 mb-8">3 habitaciones, 2 baños</p>
+                        <h3 class="text-xl font-bold text-gray-800 mb-4">Segundo piso</h3>
+                        <ul class="mb-10">
+                            <li>Habitacion principal con baño privado</li>
+                            <li>Habitacion con vestier</li>
+                            <li>2 Habitaciones auxiliares</li>
+                        </ul> 
                         <img src="img/p.jpeg" class="rounded-lg shadow-lg hover-zoom cursor-pointer" onclick="openImage('img/plano2.jpeg')">
                     </div>
                 </div>
