--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Header -->
         <header class="bg-yellow-900 shadow-md py-6">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
-                <h1 class="text-3xl text-white">Maria Paula, Tocancipa</h1>
+                <h1 class="text-3xl text-white md:text-2xl">Maria Paula, Tocancipa</h1>
                 <nav class="hidden md:flex">
                     <a href="#features" class="text-white hover:text-gray-200 mx-4">Características</a>
                     <a href="#gallery" class="text-white hover:text-gray-200 mx-4">Galería</a>
