--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </button>
                 </div>
             </div>
-            <div id="menu" class="hidden md:hidden">
+            <div id="menu" class=" md:hidden">
                 <a href="#features" class="block text-white hover:text-gray-200 px-4 py-2">Características</a>
                 <a href="#gallery" class="block text-white hover:text-gray-200 px-4 py-2">Galería</a>
                 <a href="#plans" class="block text-white hover:text-gray-200 px-4 py-2">Planos</a>
