--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="#plans" class="text-white hover:text-gray-200 mx-4">Planos</a>
                     <a href="#contact" class="text-white hover:text-gray-200 mx-4">Contacto</a>
                 </nav>
-                <div class="md:hidden">
+                <div class="hidden md:hidden">
                     <button id="menu-btn" class="text-white focus:outline-none">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -161,10 +161,10 @@
     </div>
 
     <script>
-        function openImage(src) {
-            const newWindow = window.open("", "_blank");
-            newWindow.document.write("<img src='" + src + "' style='width:80%'>");
-        }
+        document.getElementById('menu-btn').addEventListener('click', function () {
+            var menu = document.getElementById('menu');
+            menu.classList.toggle('hidden');
+        });
     </script>
 </body>
 </html>
