--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <!-- Header -->
         <header class="bg-yellow-900 shadow-md py-6">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
-                <h1 class="text-3xl text-white md:text-2xl">Maria Paula, Tocancipa</h1>
+                <h1 class="text-3xl text-white">Maria Paula, Tocancipa</h1>
                 <nav class="hidden md:flex">
                     <a href="#features" class="text-white hover:text-gray-200 mx-4">Características</a>
                     <a href="#gallery" class="text-white hover:text-gray-200 mx-4">Galería</a>
                     <a href="#plans" class="text-white hover:text-gray-200 mx-4">Planos</a>
                     <a href="#contact" class="text-white hover:text-gray-200 mx-4">Contacto</a>
                 </nav>
-                <div class="hidden md:hidden">
+                <div class="md:hidden">
                     <button id="menu-btn" class="text-white focus:outline-none">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -56,13 +56,14 @@
                     </button>
                 </div>
             </div>
-            <div id="menu" class=" md:hidden">
+            <div id="menu" class="hidden md:hidden">
                 <a href="#features" class="block text-white hover:text-gray-200 px-4 py-2">Características</a>
                 <a href="#gallery" class="block text-white hover:text-gray-200 px-4 py-2">Galería</a>
                 <a href="#plans" class="block text-white hover:text-gray-200 px-4 py-2">Planos</a>
                 <a href="#contact" class="block text-white hover:text-gray-200 px-4 py-2">Contacto</a>
             </div>
         </header>
+
 
         <!-- Hero Section -->
         <section class="bg-cover bg-center h-screen text-white" style="background-image: url('img/1.jpeg');">
