--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="text-center">
                     <h2 class="text-4xl md:text-5xl font-bold">Tu Nuevo Hogar Te Espera</h2>
                     <p class="mt-4 text-xl md:text-2xl">Compra el lote o la casa diseñada</p>
-                    <a href="#contact" class="mt-8 inline-block bg-yellow-700 hover:bg-yellow-800 text-white text-lg font-semibold py-3 px-6 rounded-lg">Contáctanos</a>
+                    <a href="https://wa.me/573187124997" class="mt-8 inline-block bg-yellow-700 hover:bg-yellow-800 text-white text-lg font-semibold py-3 px-6 rounded-lg">Contáctanos</a>
                 </div>
             </div>
         </section>
