--- a/index.html
+++ b/index.html
@@ -104,13 +104,16 @@
                         <h3 class="text-xl font-bold text-gray-800">Excelente ubicación</h3>
                         <p class="mt-4 text-gray-600">Conjunto privado en Tocancipa</p>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
-                        <div class="flex justify-center mb-4">
-                            <img src="https://static.vecteezy.com/system/resources/previews/009/927/986/non_2x/square-meter-icon-isolated-contour-symbol-illustration-vector.jpg" alt="zona verde" class="h-20 w-20">
+                    <a href="#lote">
+                        <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom pointer">
+                            <div class="flex justify-center mb-4">
+                                <img src="https://static.vecteezy.com/system/resources/previews/009/927/986/non_2x/square-meter-icon-isolated-contour-symbol-illustration-vector.jpg" alt="zona verde" class="h-20 w-20">
+                            </div>
+                            <h3 class="text-xl font-bold text-gray-800">Compra el lote o el proyecto completo</h3>
+                            <p class="mt-4 text-gray-600">Posibilidad de comprar el lote en el conjunto con fachada recomendada, o de comprar la casa diseñada.</p>
                         </div>
-                        <h3 class="text-xl font-bold text-gray-800">Compra el lote o el proyecto completo</h3>
-                        <p class="mt-4 text-gray-600">Posibilidad de comprar el lote en el conjunto con fachada recomendada, o de comprar la casa diseñada.</p>
-                    </div>
+                    </a>
+ 
                     <div class="bg-white p-6 rounded-lg shadow-lg hover-zoom">
                         <div class="flex justify-center mb-4">
                             <img src="https://st.depositphotos.com/1010146/4342/v/450/depositphotos_43424071-stock-illustration-stop-spying-icon.jpg" alt="zona verde" class="h-20 w-20">
