--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <a href="#features" class="block text-white hover:text-gray-200 px-4 py-2">Características</a>
                 <a href="#gallery" class="block text-white hover:text-gray-200 px-4 py-2">Galería</a>
                 <a href="#plans" class="block text-white hover:text-gray-200 px-4 py-2">Planos</a>
+                <a href="#lote" class="text-white hover:text-gray-200 mx-4">Lote</a>
                 <a href="#contact" class="block text-white hover:text-gray-200 px-4 py-2">Contacto</a>
             </div>
         </header>
@@ -89,6 +90,17 @@
                     <p class="mt-4 text-xl md:text-2xl">Compra el lote o la casa diseñada</p>
                     <a href="https://wa.me/573187124997" class="mt-8 inline-block bg-yellow-700 hover:bg-yellow-800 text-white text-lg font-semibold py-3 px-6 rounded-lg">Contáctanos</a>
                 </div>
+            </div>
+        </section>
+
+        <section id="video" class="py-20 bg-gray-100 flex flex-col items-center">
+            <h2 class="text-3xl font-bold text-yellow-900 mb-8">Explora Nuestro Proyecto</h2>
+            <div class="relative w-1/4 max-w-3xl">
+                <video class="w-full" controls>
+                    <source src="img/vid.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de videos.
+                </video>
+                <div class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50">Conoce más sobre Villa Paula, Tocancipa</div>
             </div>
         </section>
 
