--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         </section>
 
         <section id="video" class="py-20 bg-gray-100 flex flex-col items-center">
-            <h2 class="text-3xl font-bold text-yellow-900 mb-8">Explora Nuestro Proyecto</h2>
+            <h2 class="text-3xl font-bold text-yellow-900 mb-8">Explora el Proyecto</h2>
             <div class="relative w-1/4 max-w-3xl">
                 <video class="w-full" controls>
                     <source src="img/vid.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
                 </video>
-                <div class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50">Conoce más sobre Villa Paula, Tocancipa</div>
+                <div class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50">Conoce más sobre Villa Paula</div>
             </div>
         </section>
 
