--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section id="video" class="py-20 bg-gray-100 flex flex-col items-center">
+        <section id="video" class="py-20 bg-white flex flex-col items-center">
             <h2 class="text-3xl font-bold text-yellow-900 mb-8">Explora el Proyecto</h2>
             <div class="relative w-1/4 max-w-3xl">
                 <video class="w-full" controls>
