--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
 
         <section id="video" class="py-20 bg-white flex flex-col items-center">
             <h2 class="text-3xl font-bold text-yellow-900 mb-8">Explora el Proyecto</h2>
-            <div class="relative w-1/4 max-w-3xl">
-                <video class="w-full" controls>
-                    <source src="img/vid.mp4" type="video/mp4">
-                    Tu navegador no soporta la reproducción de videos.
-                </video>
-                <div class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50">Conoce más sobre Villa Paula</div>
+            <div class="relative max-w-3xl">
+                <iframe width="315" height="560"
+                src="https://www.youtube.com/embed/xhQrGTstXHQ?si=dUfjWVXHQGVCovlq"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             </div>
         </section>
 
