--- a/index.html
+++ b/index.html
@@ -94,29 +94,31 @@
         </section>
 
         <section id="video" class="py-20 bg-white">
-            <h2 class="text-3xl font-bold text-yellow-900 mb-8 text-center">Explora el Proyecto</h2>
-            <div class="flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-8">
-                <div class="relative">
-                    <iframe width="100%" height="400"
-                            src="https://www.youtube.com/embed/xhQrGTstXHQ?si=dUfjWVXHQGVCovlq"
-                            title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                </div>
-                <!-- Descripción -->
-                <div class="md:w-1/2">
-                    <h3 class="text-2xl font-bold text-yellow-900 mb-4">Descripción</h3>
-                    <p class="text-lg text-gray-800">En este proyecto puedes elegir entre dos modalidades:</p>
-                    <ul class="mt-4 text-lg text-gray-700">
-                        <li>Comprar la casa con el diseño ofrecido y detallado más adelante en imágenes.</li>
-                        <li>Comprar el lote y construir a tu gusto, siguiendo la fachada recomendada.</li>
-                    </ul>
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <h2 class="text-3xl font-bold text-yellow-900 mb-8 text-center">Explora el Proyecto</h2>
+                <div class="flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-8">
+                    <!-- Video -->
+                    <div class="relative md:w-1/2">
+                        <iframe width="100%" height="400"
+                                src="https://www.youtube.com/embed/xhQrGTstXHQ?si=dUfjWVXHQGVCovlq"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
+                    </div>
+                    <!-- Descripción -->
+                    <div class="md:w-1/2">
+                        <h3 class="text-2xl font-bold text-yellow-900 mb-4">Descripción</h3>
+                        <p class="text-lg text-gray-800">En este proyecto puedes elegir entre dos modalidades:</p>
+                        <ul class="mt-4 text-lg text-gray-700">
+                            <li>Comprar la casa con el diseño ofrecido y detallado más adelante en imágenes.</li>
+                            <li>Comprar el lote y construir a tu gusto, siguiendo la fachada recomendada.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <!-- Video -->
-
         </section>
+        
         
 
         <!-- Features Section -->
