--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="text-center">
                     <h2 class="text-4xl md:text-5xl font-bold">Tu Nuevo Hogar Te Espera</h2>
                     <p class="mt-4 text-xl md:text-2xl">Compra el lote o la casa diseñada</p>
-                    <a href="https://wa.me/573187124997" class="mt-8 inline-block bg-yellow-700 hover:bg-yellow-800 text-white text-lg font-semibold py-3 px-6 rounded-lg">Contáctanos</a>
+                    <a href="https://wa.me/573158812329" class="mt-8 inline-block bg-yellow-700 hover:bg-yellow-800 text-white text-lg font-semibold py-3 px-6 rounded-lg">Contáctanos</a>
                 </div>
             </div>
         </section>
@@ -231,7 +231,7 @@
                 </div>
                 
                 <!-- Información adicional y botón de contacto -->
-                <div class="mt-12 p-8 rounded-lg shadow-lg flex flex-col md:flex-row md:justify-between items-center bg-yellow-50">
+                <div class="mt-12 p-8 rounded-lg shadow-lg flex flex-col md:flex-row md:justify-between items-center bg-yellow-50 contact">
                     <div class="md:w-2/3 text-left">
                         <h3 class="text-3xl font-bold text-yellow-800">Precio del lote</h3>
                         <p class="mt-4 text-black text-lg">Desde <strong class="text-yellow-800 text-xl">$120`000.000 COP</strong></p>
